# NyayaSetu-AI

./: .gitignore  main.py  pyproject.toml  test_gemini.py
backend/: main.py
backend/api/: chat.py  documents.py
backend/prompts/: system_prompt.py
backend/services/: ai_service.py  pdf_service.py
